--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
 
+<html>
+ <head>
+  <title>
+    My Paragraph
+    </title>
+   </head>
+  
+  <body>
+    <h1> This is my paragraph fpr testing</h1>
+    </body>
+  <style>
+    body {
+      background-color:green;
+    }
+    </style>
+  </html>
