--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ var WindowEvent;(function(n){n[n.Load="load"]="Load";n[n.BeforeUnload="beforeunl
   
   <body>
     <h1> This is my paragraph fpr testing</h1>
+   RProfiler.addInfo('conversion',100,0);
     </body>
   <style>
     body {
