--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@ var WindowEvent;(function(n){n[n.Load="load"]="Load";n[n.BeforeUnload="beforeunl
   
   <body>
     <h1> This is my paragraph fpr testing</h1>
+   <script>
    RProfiler.addInfo('conversion',100,0);
+    </script>
     </body>
   <style>
     body {
