--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@ var webengage; !function(w,e,b,n,g){function o(e,t){e[t[t.length-1]]=function(){
 
 webengage.init("~1341051b6");
 </script>
+  
+  webengage.track("orderplaced","123" );
 
   <title>
     My Paragraph
