--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ var webengage; !function(w,e,b,n,g){function o(e,t){e[t[t.length-1]]=function(){
 
 webengage.init("~1341051b6");
     webengage.track("UserLoggedIn","123" );
-   webengage.track('Added To Cart', {
+   webengage.track('Login', {
     /* numbers */
-    "Product ID" : 1337,
+    "A" : 1337,
     "Price"      : 39.80,
     "Quantity"   : 1,
 
