--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@ webengage.init("~1341051b6");
     /* booleans */
     "Discounted" : true
 });
+   
+webengage.track('Completed 1 tutorial-Duration 5 hours', {
+    /* numbers */
+    "A" : 1337,
+    "Price"      : 39.80,
+    "Quantity"   : 1,
+
+    /* strings */
+    "Product"    : 'Givenchy Pour Homme Cologne',
+    "Category"   : 'Fragrance',
+    "Currency"   : 'USD',
+
+    /* booleans */
+    "Discounted" : true
+})   
 </script>
   
  
