--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@ webengage.init("~1341051b6");
     webengage.track('New courses', {
     /* numbers */
     "A" : 1337,
-    "Price"      : 39.80,
-    "Quantity"   : 1,
+    "Java"      : 39.80,
+    "SQL"   : 1,
 
     /* strings */
-    "Product"    : 'Givenchy Pour Homme Cologne',
-    "Category"   : 'Fragrance',
-    "Currency"   : 'USD',
+    "IT"    : 'Givenchy Pour Homme Cologne',
+    "Networking"   : 'Fragrance',
+    "database"   : 'USD',
 
     /* booleans */
     "Discounted" : true
