--- a/index.html
+++ b/index.html
@@ -48,7 +48,22 @@ webengage.track('Completed 1 tutorial-Duration 5 hours', {
 
     /* booleans */
     "Discounted" : true
-})   
+}) 
+   
+ webengage.track('Page visit', {
+    /* numbers */
+    "A" : 1337,
+    "Java"      : 39.80,
+    "SQL"   : 1,
+
+    /* strings */
+    "IT"    : 'Givenchy Pour Homme Cologne',
+    "Networking"   : 'Fragrance',
+    "database"   : 'USD',
+
+    /* booleans */
+    "Discounted" : true
+});   
 </script>
   
  
