--- a/index.html
+++ b/index.html
@@ -63,7 +63,36 @@ webengage.track('Completed 1 tutorial-Duration 5 hours', {
 
     /* booleans */
     "Discounted" : true
-});   
+}); 
+    webengage.track('Not Logged In', {
+    /* numbers */
+    "A" : 1337,
+    "Java"      : 39.80,
+    "SQL"   : 1,
+
+    /* strings */
+    "IT"    : 'Givenchy Pour Homme Cologne',
+    "Networking"   : 'Fragrance',
+    "database"   : 'USD',
+
+    /* booleans */
+    "NOLogin" : true
+});
+   
+    webengage.track('Bounced off', {
+    /* numbers */
+    "A" : 1337,
+    "Java"      : 39.80,
+    "SQL"   : 1,
+
+    /* strings */
+    "IT"    : 'Givenchy Pour Homme Cologne',
+    "Networking"   : 'Fragrance',
+    "database"   : 'USD',
+
+    /* booleans */
+    "Bounce" : true
+});
 </script>
   
  
