--- a/index.html
+++ b/index.html
@@ -93,6 +93,19 @@ webengage.track('Completed 1 tutorial-Duration 5 hours', {
     /* booleans */
     "Bounce" : true
 });
+   
+   webengage.track('Purchace success', {
+    /* numbers */
+    "A" : 1337,
+    "Java"      : 39.80,
+    "SQL"   : 1,
+    /* strings */
+    "IT"    : 'Givenchy Pour Homme Cologne',
+    "Networking"   : 'Fragrance',
+    "database"   : 'USD',
+    /* booleans */
+    "Bounce" : true
+});
 </script>
   
  
