--- a/index.html
+++ b/index.html
@@ -35,6 +35,20 @@ webengage.init("~1341051b6");
     "Discounted" : true
 });
    
+   webengage.track('Chat-channel', {
+    /* numbers */
+    "A" : 1337,
+    "Java"      : 39.80,
+    "SQL"   : 1,
+
+    /* strings */
+    "IT"    : 'Givenchy Pour Homme Cologne',
+    "Networking"   : 'Fragrance',
+    "database"   : 'USD',
+
+    /* booleans */
+    "Discounted" : true
+   
 webengage.track('Completed 1 tutorial-Duration 5 hours', {
     /* numbers */
     "A" : 1337,
