--- a/index.html
+++ b/index.html
@@ -93,7 +93,36 @@ webengage.track('Completed 1 tutorial-Duration 5 hours', {
     /* booleans */
     "NOLogin" : true
 });
+    webengage.track('Profile', {
+    /* numbers */
+    "A" : 1337,
+    "Java"      : 39.80,
+    "SQL"   : 1,
+
+    /* strings */
+    "IT"    : 'Givenchy Pour Homme Cologne',
+    "Networking"   : 'Fragrance',
+    "database"   : 'USD',
+
+    /* booleans */
+    "NOLogin" : true
+     
+});
    
+   webengage.track('payment success', {
+    /* numbers */
+    "A" : 1337,
+    "Java"      : 39.80,
+    "SQL"   : 1,
+
+    /* strings */
+    "IT"    : 'Givenchy Pour Homme Cologne',
+    "Networking"   : 'Fragrance',
+    "database"   : 'USD',
+
+    /* booleans */
+    "NOLogin" : true
+});
     webengage.track('Bounced off', {
     /* numbers */
     "A" : 1337,
