--- a/index.html
+++ b/index.html
@@ -123,6 +123,21 @@ webengage.track('Completed 1 tutorial-Duration 5 hours', {
     /* booleans */
     "NOLogin" : true
 });
+   
+    webengage.track('Profile complete', {
+    /* numbers */
+    "A" : 1337,
+    "Java"      : 39.80,
+    "SQL"   : 1,
+
+    /* strings */
+    "IT"    : 'Givenchy Pour Homme Cologne',
+    "Networking"   : 'Fragrance',
+    "database"   : 'USD',
+
+    /* booleans */
+    "Discounted" : true
+ });
     webengage.track('Bounced off', {
     /* numbers */
     "A" : 1337,
